sofia-rs/tui/src/bottom_pane/snapshots/sofia_tui__bottom_pane__feedback_view__tests__feedback_success_employee.snap
---
source: tui/src/bottom_pane/feedback_view.rs
expression: rendered
---
• Feedback uploaded. You can share this in #sofia-feedback:

  http://go/sofia-feedback-internal

  Sentry Feedback ID: thread-2
  Sentry URL: https://go/sofia-feedback/thread-2
